--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Download
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+    <a href="README.md">README.md</a>
+  </body>
+</html>
