--- a/index.html
+++ b/index.html
@@ -1,9 +1,70 @@
-<html>
-  <head>
+<!DOCTYPE html>
+<html lang="es">
+
+<head>
     <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-    <a href="README.md">README.md</a>
-  </body>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>Descargas de archivos Nutrifamie</title>
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/estilos.css">
+    <link href="img/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon">
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+</head>
+
+<body>
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="index.html"><img height="30" src="img/logo-nutrifami.png" alt="logo"></a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="http://www.nutrifami.org">Ir a Nutrifami</a></li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container-fluid -->
+    </nav>
+    <div class="container-fluid">
+        <table class="table table-striped">
+            <tr>
+                <th>#</th>
+                <th>Nombre</th>
+                <th>Versión</th>
+                <th>Fecha</th>
+                <th>Descarga</th>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>nf_1_0_1.apk</td>
+                <td>1.0.1</td>
+                <td>03-11-2016</td>
+                <td><a href="nf_1_0_1.apk"><span class="glyphicon glyphicon-download-alt" aria-hidden="true"></span></a></td>
+            </tr>
+        </table>
+    </div>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
+</body>
+
 </html>
